--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^19.1.7",
     "@types/react-router-dom": "^5.3.3",
     "firebase": "^12.1.0",
+    "lucide-react": "^0.543.0",
     "plotly.js-dist": "^3.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
